@@ -27,7 +27,7 @@ module.exports = function (app, stream) {
       if ('Content-Length' in headers) {
         length = headers['Content-Length'];
       } else if (typeof body === 'string') {
-        length = String(Buffer.byteLength(body));
+        length = Buffer.byteLength(body);
       } else if (typeof body.length === 'number') {
         length = String(body.length);
       }
