@@ -9,9 +9,9 @@ module.exports = function (app) {
     app(env, function (status, headers, body) {
       if (!('Content-Length' in headers) && !headers['Transfer-Encoding'] && !utils.isEmptyBodyStatus(status)) {
         if (typeof body === 'string') {
-          headers['Content-Length'] = String(Buffer.byteLength(body));
+          headers['Content-Length'] = Buffer.byteLength(body);
         } else if (typeof body.length === 'number') {
-          headers['Content-Length'] = String(body.length);
+          headers['Content-Length'] = body.length;
         } else {
           env.error.write('Cannot set Content-Length for body with no length\n');
         }
