@@ -139,7 +139,7 @@ function generateListing(env, callback, root, pathInfo, scriptName) {
 
     callback(200, {
       'Content-Type': 'text/html',
-      'Content-Length': String(Buffer.byteLength(content))
+      'Content-Length': Buffer.byteLength(content)
     }, content);
   });
 }
