@@ -1,5 +1,4 @@
-var Stream = require('stream').Stream;
-var EventEmitter = require('events').EventEmitter;
+var Stream = require('stream');
 var strata = require('./index');
 var utils = require('./utils');
 
@@ -180,8 +179,10 @@ function checkHeaders(headers) {
   // required, the value for that property must be an array.
   assert(typeof headers === 'object', 'Headers must be an object');
 
+  var value;
   for (var headerName in headers) {
-    assert(typeof headers[headerName] === 'string', 'Value for header "' + headerName + '" must be a string');
+    value = headers[headerName];
+    assert(typeof value === 'string' || typeof value === 'number' || Array.isArray(value), 'Header value must be a string, number, or array');
     assert((/^[0-9A-Za-z_-]+$/).test(headerName), 'Invalid header name "' + headerName + '"');
     assert((/^[A-Za-z]/).test(headerName), 'Header name must start with a letter');
     assert(!(/[_-]$/).test(headerName), 'Header name must not end with a "_" or "-"');
@@ -191,23 +192,23 @@ function checkHeaders(headers) {
 function checkBody(body) {
   // The body must be either a string or a readable Stream. If it is a Stream, the
   // response will be pumped through to the client.
-  assert(typeof body === 'string' || body instanceof EventEmitter, 'Body must be a string or Stream');
+  assert(typeof body === 'string' || body instanceof Stream, 'Body must be a string or Stream');
 }
 
 function checkContentType(status, headers) {
   // There must be a Content-Type header, except for when the status is 1xx, 204, or
   // 304, in which case there must be none given.
-  if (utils.STATUS_WITH_NO_ENTITY_BODY.indexOf(status) == -1) {
-    assert('Content-Type' in headers, 'Missing Content-Type header');
+  if (utils.isEmptyBodyStatus(status)) {
+    assert(!('Content-Type' in headers), 'Content-Type header given for response with no entity body');
   } else {
-    assert(!('Content-Type' in headers), 'Content-Type header given for respons with no entity body');
+    assert('Content-Type' in headers, 'Missing Content-Type header');
   }
 }
 
 function checkContentLength(status, headers, body) {
   // There must not be a Content-Length header when the status is 1xx, 204, or 304,
   // or it must be "0".
-  if (utils.STATUS_WITH_NO_ENTITY_BODY.indexOf(status) != -1 && 'Content-Length' in headers) {
-    assert(headers['Content-Length'] == '0', 'Non-zero Content-Length header given for respons with no entity body');
+  if (utils.isEmptyBodyStatus(status) && 'Content-Length' in headers) {
+    assert(headers['Content-Length'] == '0', 'Non-zero Content-Length header given for response with no entity body');
   }
 }
