@@ -13,7 +13,7 @@ function redirect(env, callback, location, status) {
 
   callback(status, {
     'Content-Type': 'text/html',
-    'Content-Length': String(Buffer.byteLength(content)),
+    'Content-Length': Buffer.byteLength(content),
     'Location': location
   }, content);
 }
