@@ -213,7 +213,7 @@ function ok(env, callback) {
 
   callback(200, {
     'Content-Type': 'text/plain',
-    'Content-Length': String(Buffer.byteLength(content))
+    'Content-Length': Buffer.byteLength(content)
   }, content);
 }
 
@@ -225,7 +225,7 @@ function badRequest(env, callback) {
 
   callback(400, {
     'Content-Type': 'text/plain',
-    'Content-Length': String(Buffer.byteLength(content))
+    'Content-Length': Buffer.byteLength(content)
   }, content);
 }
 
@@ -239,7 +239,7 @@ function unauthorized(env, callback, realm) {
 
   callback(401, {
     'Content-Type': 'text/plain',
-    'Content-Length': String(Buffer.byteLength(content)),
+    'Content-Length': Buffer.byteLength(content),
     'WWW-Authenticate': 'Basic realm="' + realm + '"'
   }, content);
 }
@@ -252,7 +252,7 @@ function forbidden(env, callback) {
 
   callback(403, {
     'Content-Type': 'text/plain',
-    'Content-Length': String(Buffer.byteLength(content))
+    'Content-Length': Buffer.byteLength(content)
   }, content);
 }
 
@@ -264,7 +264,7 @@ function notFound(env, callback) {
 
   callback(404, {
     'Content-Type': 'text/plain',
-    'Content-Length': String(Buffer.byteLength(content))
+    'Content-Length': Buffer.byteLength(content)
   }, content);
 }
 
@@ -276,6 +276,6 @@ function serverError(env, callback) {
 
   callback(500, {
     'Content-Type': 'text/plain',
-    'Content-Length': String(Buffer.byteLength(content))
+    'Content-Length': Buffer.byteLength(content)
   }, content);
 }
