@@ -1,3 +1,7 @@
+= HEAD
+
+  * Do not enforce header value type in the lint middleware.
+
 = 0.18.0 / 2012-10-07
 
   * The input stream is paused by default.
